
0.3.0a - 02/12/2023

- completely reworked collectible system
- introduced level 3
- introduced collectible updates for all levels
- slight recommenting
- reworked victory system - now requires you to pass through all collectible types in that level
- new level unlocking system; only level 1 starts unlocked (press 0 to unlock all levels)
- levels now have their own timers (3 minutes for levels 1 and 2 and 5 minutes for level 3)
- taking too long now reduces the amount of points you get (30 less points per collectible at 2 minutes remaining and another 30 point deduction at 1 minute remaining)
- enormous changes to levelLoader
- slight victory screen rework, still WIP (now doesn't affect side menu so one can see their score and time)
- victory is now defined by a flag that gets checked at the end of every tick rather than a jump
- many, many fixes.

0.3.1a - 02/12/2023

- introduced proper enemy rendering system (now renders according to type and state)
- small fixes to level information files and level 3's hitboxes
- the player must now face a direction before they may move in it. This significantly improves controlability

0.3.2a - 04/12/2023

- modularized the collectible value decrement, which is now level-dependent.
- overhauled code comments and documentation (long overdue this one)
- reorganized parts of the code
- tick counter register is no longer capped at all (previously capped at 200)
- added a placeholder level select menu to fix the painfully misleading main menu options
- a BUNCH of small fixes

0.4.0a - 05/12/2023

- Introduced enemy movement AI, decided it won't be deterministic
- changes to level 1's layout
- small fix to level 3's hitboxes
- fixed background render not providing offset argument to displayPrint (makes sound effects possible)

0.4.1a - 06/12/2023
- Small art changes;
- Fully revamped level select and victory screens;
- Made level 3's game design just a little less unbearable;
- Just reminding you Lamar is there, frozen.