@@ -6,11 +6,11 @@ level1:
  	0, 0, 0, 0, 1, 0, 1, 3, 0, 2, 0, 2, 2, 0, 2, 0, 3, 1, 0, 1,
  	0, 0, 0, 0, 1, 0, 0, 1, 3, 2, 0, 0, 9, 0, 2, 3, 1, 0, 0, 1,
  	0, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0, 0, 0, 2, 1, 0, 0, 0, 1,
- 	0, 0, 0, 0, 1, 0, 0, 0, 0, 5, 0, 0, 0, 0, 5, 0, 0, 0, 0, 1,
+ 	0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
  	0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 1, 1, 1, 1, 0, 0, 2, 0, 0, 1,
  	0, 0, 0, 0, 1, 2, 2, 4, 2, 0, 1, 1, 1, 1, 0, 2, 4, 2, 2, 1,
  	0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 1, 1, 1, 1, 0, 0, 2, 0, 0, 1,
- 	0, 0, 0, 0, 1, 0, 0, 0, 0, 5, 0, 0, 0, 0, 5, 0, 0, 0, 0, 1,
+ 	0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
  	0, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0, 0, 0, 2, 1, 0, 0, 0, 1,
  	0, 0, 0, 0, 1, 0, 0, 1, 3, 2, 0, 0, 0, 0, 2, 3, 1, 0, 0, 1,
  	0, 0, 0, 0, 1, 0, 1, 3, 0, 2, 0, 2, 2, 0, 2, 0, 3, 1, 0, 1,
