@@ -1,17 +1,17 @@
 level1_info:
 l1enemyAmount:
-.word	8
+.word	4
 l1enemyPositions:
 	# x, y, ID
 .byte	
 	5, 1, 0,
 	18, 1, 1,
-	9, 5, 2,
-	14, 5, 3,
-	9, 9, 4,
-	14, 9, 5,
-	5, 13, 6,
-	18, 13, 7
+	5, 13, 2,
+	18, 13, 3,
+	0, 0, 4,
+	0, 0, 5,
+	0, 0, 6,
+	0, 0, 7
 l1enemyTypes:
 .byte	
 	0,
