@@ -1,0 +1,35 @@
+padlockoverlay: .word 32, 32
+.byte 199,199,199,199,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,199,199,199,199,199,
+199,199,199,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,199,199,
+199,199,199,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,199,199,
+199,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,
+199,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,199,
+1,199,1,199,1,199,1,199,1,199,1,199,164,246,164,246,164,246,164,82,1,199,1,199,1,199,1,199,1,199,1,199,
+199,1,1,1,199,1,1,1,199,1,246,164,246,164,164,164,164,164,246,164,246,82,1,1,199,1,1,1,199,1,1,1,
+1,199,1,199,1,199,1,199,1,246,164,164,164,82,164,82,164,246,164,164,164,246,82,199,1,199,1,199,1,199,1,199,
+199,1,199,1,1,1,199,1,1,164,82,164,82,82,3,1,1,1,246,164,246,164,82,1,1,1,199,1,1,1,199,1,
+1,199,1,199,1,199,1,199,246,164,164,82,1,3,1,3,1,3,1,3,164,164,164,82,1,199,1,199,1,199,1,199,
+199,1,1,1,199,1,1,1,164,82,164,82,3,1,1,1,3,1,1,1,246,164,82,164,199,1,1,1,199,1,1,1,
+1,199,1,199,1,199,1,199,246,164,82,3,1,3,1,3,1,3,1,3,1,164,164,82,1,199,1,199,1,199,1,199,
+199,1,199,1,1,1,199,1,164,82,82,1,1,1,3,1,1,1,3,1,1,164,82,82,1,1,199,1,1,1,199,1,
+1,199,1,199,1,199,1,46,63,46,63,63,63,63,46,63,46,63,46,63,46,63,38,29,29,199,1,199,1,199,1,199,
+199,1,1,1,199,1,46,63,255,63,255,46,63,46,63,46,63,46,63,46,46,46,46,46,38,29,1,1,199,1,1,1,
+1,199,1,199,1,199,63,255,46,63,46,63,46,46,20,20,20,46,46,46,63,46,46,38,29,29,1,199,1,199,1,199,
+199,1,199,1,1,1,63,255,63,46,63,46,63,20,1,1,1,10,63,46,46,38,46,46,38,29,199,1,1,1,199,1,
+1,199,1,199,1,199,63,63,46,46,46,46,20,1,1,1,1,1,10,46,46,46,38,38,29,29,1,199,1,199,1,199,
+199,1,1,1,199,1,63,46,63,46,46,63,20,1,1,1,1,1,10,63,46,46,63,38,38,29,1,1,199,1,1,1,
+1,199,1,199,1,199,46,63,46,46,46,46,20,1,1,1,1,1,10,46,46,46,38,46,29,29,1,199,1,199,1,199,
+199,1,199,1,1,1,63,46,46,63,46,46,63,20,1,1,1,10,38,46,63,46,46,29,46,29,199,1,1,1,199,1,
+1,199,1,199,1,199,46,46,46,46,46,46,46,46,20,1,10,46,46,46,46,46,46,38,29,29,1,199,1,199,1,199,
+199,1,1,1,199,1,38,63,46,46,63,46,46,20,1,1,1,10,63,46,38,46,38,29,38,29,1,1,199,1,1,1,
+1,199,1,199,1,199,46,46,38,46,38,46,38,20,1,1,1,10,38,46,46,29,46,38,29,29,1,199,1,199,1,199,
+199,1,199,1,1,1,29,38,29,38,29,38,46,10,10,10,10,10,29,46,29,46,29,29,46,29,199,1,1,1,199,1,
+1,199,1,199,1,199,38,29,46,29,38,46,29,38,29,46,38,29,46,29,38,29,46,29,29,29,1,199,1,199,1,199,
+199,1,1,1,199,1,1,29,29,29,29,29,29,29,29,29,29,29,29,29,29,29,29,29,29,1,1,1,199,1,1,1,
+199,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,
+199,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,199,
+199,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,199,199,
+199,199,199,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,1,1,1,199,199,199,199,
+199,199,199,199,199,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,1,199,199,199,199,199,
+
+
